0.83.00 2002-DEC-??

-showing the color change of the discs one by one
-showing computers last disc

0.82.00 2002-DEC-13

-Skill bug fixed
-Information Panel next to the board
-doublebuffering turned on by default
-Display enhancements

0.81.00 2002-DEC-06

-Thinking during human turn
-Show possible moves
-smaller jar size

0.80.00 2002-NOV-26

-Renaming project to jtReversi
-Supporting non-doublebuffered devices
-Background color for color display
-Better display for non-square screens (e.g. Nokia 9210)
-Better AI
-Splash screen

0.73.00 2002-NOV-14

-Better display for small screen
-Show the default skill in skill list
-Exit works in skill list
-Two-player game message changes
-Thinking message
-Company logo :-)

0.72.00 2002-NOV-07

-End game statistics
-Supporting proguard-1.4 obfuscator
-Ant: automatic jad file calculate
-Ant: fixes for Windows
-Detecting draw
-Minimax code changes

0.71.00 2002-OCT-22

-Ant improvements

0.70.00 2002-OCT-12

-Two Player Mode
-Level Change during game
-Icon
-Using Ant build tool
-Optional use of obfuscator (retroguard-1.1)
-Using heuristic point calculation
-AI: Killer Move
-AI: Move Order
-AI: Turned on Alpha-Beta cut
-Pass Info

0.62.00 2002-SEP-28

-About Box
-Level Change
-Display bugfixes
-Color Display (if available)
-AI bugfix

0.61.00 2002-SEP-21

-Less memory usage (BitSet storage)
-build and run scripts for Windows

0.60.00 2002-SEP-16

-First version