@@ -4,16 +4,10 @@ mainpackage=reversi
 main=${mainpackage}.jtReversi
 device=DefaultColorPhone
 
-wtk_home=/usr/local/java/WTK104
 wtk.home=/usr/local/java/WTK104
-proguard_jar=/usr/local/java/proguard1.4/lib/proguard.jar
-ant_home=/usr/local/java/jakarta-ant-1.5
-retroguard_home=/usr/local/java/retroguard-v1.1
 microemulator_home=/usr/local/java/microemulator
 
 classes=classes
-tmpclassescompact=tmpclassesc
-classescompact=classesc
 src=src
 jars=bin
 apidir=docs/api
