@@ -167,11 +167,12 @@ If you really want to compile, you'll need the followings:
 <li>Java 2 JDK (tested with IBM's Java 2 JDK 1.3 for Linux)</li>
 <li>J2ME wireless toolkit (tested with version 1.0.4)</li>
 <li>Jakarta-Ant (tested with version 1.4.1)</li>
+<li><a href="http://antenna.sf.net">Antenna</a> (tested with version 0.9.5)</li>
 
 </ul>
 
 <ol>
-<li>Change the path of WTK_HOME in .ant.properties file.</li>
+<li>Change the path of wtk.home in .ant.properties file.</li>
 <li><code>ant</code></li>
 </ol>
 
@@ -179,13 +180,17 @@ If you really want to compile, you'll need the followings:
 
 If you use obfuscator, the size of the jar file will be smaller. Currently
 the build process can use only two obfuscators: 
-<a href="http://j2mereversi.sourceforge.net/proguard.sf.net">ProGuard</a> version 1.4 
-and <a href="http://j2mereversi.sourceforge.net/www.retrologic.com">RetroGuard</a> version 1.1
+<a
+href="http://j2mereversi.sourceforge.net/proguard.sf.net">ProGuard</a>
+(tested with versions 1.4, 1.5)
+and <a
+href="http://j2mereversi.sourceforge.net/www.retrologic.com">RetroGuard</a>
+version 1.1 
 
 <ol>
-<li>Change the path of RETROGUARD_HOME or PROGUARD_JAR in .ant.properties file.</li>
-<li>Change obfuscate_null to obfucate_proguard or obfuscate_retroguard in line 
-   &lt;target name="unjar" depends="obfuscate_null" &gt; in build.xml</li>
+<li>Copy (or symlink) proguard.jar or retroguard.jar into WTK's bin
+directory.</li>
+<li>Change the obfuscate="false" to obfucate="true" in build.xml</li>
 <li><code>ant</code></li>
 </ol>
 
@@ -215,7 +220,7 @@ If you have ant installed you can run the program using ant, instead of
 the run.sh (run.bat) scripts.
 
 <ol>
-<li>Change the path of WTK_HOME in .ant.properties file.</li>
+<li>Change the path of wtk.home in .ant.properties file.</li>
 <li><code>ant run</code></li>
 </ol>
 
@@ -237,9 +242,11 @@ GPL
 
 <h2>Authors</h2>
 
-Andr&aacute;s Salamon / Jataka Ltd. (<a
+Andr&aacute;s Salamon / <a href="http://www.jataka.hu">Jataka Ltd.</a> (<a
 href="mailto:asalamon@users.sourceforge.net">asalamon@users.sourceforge.net</a>)<br />
-Rich&aacute;rd Szab&oacute;/ Jataka Ltd. (<a href="mailto:richard_szabo@users.sourceforge.net">richard_szabo@users.sourceforge.net</a>)
+Rich&aacute;rd Szab&oacute;/ <a href="http://www.jataka.hu">Jataka
+Ltd.</a> 
+(<a href="mailto:richard_szabo@users.sourceforge.net">richard_szabo@users.sourceforge.net</a>)
 
 <hr>
 <a href="http://sourceforge.net/"> <img src="J2MEReversi_files/sflogo.html" width="210" height="62" border="0" alt="SourceForge Logo"></a> 
