@@ -2,6 +2,7 @@
 
 -showing the color change of the discs one by one
 -showing computers last disc
+-using antenna build tool
 
 0.82.00 2002-DEC-13
 
